--- a/src/config.yaml
+++ b/src/config.yaml
@@ -44,7 +44,7 @@ apps:
 
     list:
       isEnabled: true
-      pathname: 'blog' # Blog main path, you can change this to "articles" (/articles)
+      pathname: 'news' # Lab News main path
       robots:
         index: true
 
